# Maze_creator

./: .gitignore  AGENTS.md  Dockerfile  compose.yaml
.github/workflows/: backend_dev.yaml  maze_creator_dev.yaml  maze_creator_release.yaml
backend/: AGENT.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml
backend/handler/: Cargo.toml
backend/handler/src/: error.rs  extractor.rs  handle_blogs.rs  handler.rs  handler_users.rs  lib.rs
backend/handler/src/model/: blog.rs  image.rs  mod.rs  user.rs
backend/shared/src/: config.rs
backend/src/: main.rs
backend/src/handler/: error.rs  handle_blogs.rs  handler.rs  mod.rs
backend/src/migrations/: 20260102082232_blogs.down.sql  20260102082232_blogs.sql  20260102082232_blogs.up.sql  20260102130821_blogs.down.sql  20260102130821_blogs.sql  20260102130821_blogs.up.sql  20260201094914_blogs.down.sql  20260201094914_blogs.up.sql  20260201113344_blogs_change_id.down.sql  20260201113344_blogs_change_id.up.sql  20260215130826_create_users_table.up.sql  20260215161025_add_salt_to_users.down.sql  20260215161025_add_salt_to_users.up.sql  20260301170826_blogs_set_updated_at_default.down.sql  20260301170826_blogs_set_updated_at_default.up.sql  20260314095352_users_update.down.sql  20260314095352_users_update.up.sql  20260314110015_users_update.down.sql  20260314110015_users_update.up.sql
backend/src/model/: blog.rs
backend/src/repository/: blog_repository.rs  mod.rs  repository.rs
backend/src/service/: blog_service.rs  create_blog.rs  mod.rs  service.rs
backend/storage/: Cargo.toml
backend/storage/.sqlx/: query-32b68fb92a0685f91641993569953c91b0bb3252fd073031567c5ca0d9ff74dd.json  query-55e40a92bca5bfc4ba1001659a33ec4281c1557207779262dfc09e30ea9d0770.json  query-6c9aa6a496a6efad23fda8365a7e00e61fabb6bd6dc8175757a1db16b3af621f.json  query-6ce37a3c104dc724427d2ea7b6384a874d4cd6c94f905ff2056fd64da4280f39.json  query-f48016f004b2478c34094acf329862c5db12ba25fb4f250dbb6ccee1f018ed03.json
backend/storage/src/: blog_repository.rs  lib.rs  repository.rs
backend/storage/src/base/: base_repository.rs
backend/storage/src/blogs/: blog_repository.rs
backend/storage/src/database/: mod.rs
backend/storage/src/redis/: mod.rs  model.rs
backend/storage/src/users/: mod.rs  model.rs  user_repository.rs
backend/usecase/: Cargo.toml
backend/usecase/src/: lib.rs
backend/usecase/src/errors/: app_error.rs  mod.rs  repo_error.rs
backend/usecase/src/model/: blog.rs  image.rs  mod.rs  user.rs
backend/usecase/src/repository/: base_repository.rs  blog.rs  mod.rs  repositories.rs  types.rs  user.rs
backend/usecase/src/service/: blog_service.rs  mod.rs  service.rs
backend/usecase/src/service/blog/: blog_service.rs
backend/usecase/src/service/user/: helper.rs  mod.rs  user_service.rs
docs/: react-architecture.md
frontend/: .gitignore  .prettierignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
frontend/design/: maze-modes.md
frontend/design/frontend/: design.md  (+1 more)
frontend/src/: App.tsx
frontend/wasm/: Cargo.toml
frontend/wasm-frontend/: package.json
frontend/wasm/src/: dom.rs  lib.rs
frontend/wasm/src/algo/: grid.rs  kruskal.rs  mod.rs  shape.rs  single_stroke.rs  unionfind.rs
frontend/wasm/src/maze/: draw_rect.rs  draw_shape.rs  mod.rs  random_maze.rs  shape.rs  single_stroke_maze.rs
nginx/: Dockerfile
wasm/: Cargo.toml  Dockerfile
(+17 files in other folders)
