[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = "0.8.6"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread", 
    "rt",
    "tokio-macros"
    ]}
