[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-shutdown = "0.2.2"
axum = "0.8.8"
chrono = "0.4.42"
dotenv = "0.15.0"
log = "0.4.29"
openssl = "0.10.75"
postgres-openssl = "0.5.2"
rustls = "0.23.35"
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = "0.8.6"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread", 
    "rt",
    "tokio-macros"
    ]}
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "json"
    ]}
