[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["handler", "usecase", "storage", "shared"]

[workspace.dependencies]
handler = { path = "./handler" }
usecase = { path = "./usecase" }
storage = { path = "./storage" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.100"
async-shutdown = "0.2.2"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "json",
    "uuid",
    "migrate",
    "macros",
    "sqlx-macros",
    "sqlx-postgres"
    ]}
tokio = { version = "1.48.0", features = [
    "rt-multi-thread", 
    "rt",
    "tokio-macros"
    ]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "json"
    ]}
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = [
    "v7"
]}



[dependencies]
handler.workspace = true
usecase.workspace = true
storage.workspace = true
shared.workspace = true

anyhow.workspace = true
async-shutdown.workspace = true
axum.workspace = true
chrono.workspace = true
dotenv.workspace = true
log.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
async-trait.workspace = true
uuid.workspace = true

