[package]
name = "wasm"
version = "0.1.0"
description = "Create maze by wasm"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.99"
js-sys = "0.3.77"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"


[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]